src/test/test-models/bad/functions-bad24.stan
functions {
  void bar(real x) {
    return x;
  }
}
